Bootstrap the Flutter IJ with integrations tests (#8487)
The additional STARTER test framework is added, see https://github.com/JetBrains/intellij-ide-starter

Thanks to others here who trailblazed, @Jonathan1983, https://github.com/JetBrains/intellij-platform-plugin-template/pull/537 and  @helinx, https://github.com/flutter/flutter-intellij/pull/8338